--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
         </div>
 
         <!-- الشعار + اسم الموقع -->
-        <a href="" class="logo-box">
-            <img
-                src="assets/images/brand/logo.svg"
-                alt="Toonia Logo"
-                width="40"
-                height="40"
-                loading="eager"
-                decoding="async">
-            <div class="site-name">
-                Too<span>nia</span>
-            </div>
-        </a>
+<a href="./" class="logo-box">
+    <img
+        src="/toonia/assets/images/brand/logo.svg"
+        alt="Toonia Logo"
+        width="40"
+        height="40"
+        loading="eager"
+        decoding="async">
+    <div class="site-name">
+        Too<span>nia</span>
+    </div>
+</a>
 
     </div>
 
