--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <!-- الشعار + اسم الموقع -->
 <a href="./" class="logo-box">
     <img
-  src="/toonia/assets/images/brand/logo.webp"
-  alt="Toonia Logo"
-  width="40"
-  height="40">
+        src="/toonia/assets/images/brand/logo.svg"
+        alt="Toonia Logo"
+        width="40"
+        height="40"
         loading="eager"
-        decoding="async">
+        decoding="async" />
     <div class="site-name">
         Too<span>nia</span>
     </div>
