--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <!-- عنوان الصفحة (مهم للـ SEO) -->
     <title>Toonia - عالم الأنمي</title>
     
-    <base href="/toonia/">
-
-
     <!-- ================================== -->
     <!--  ملفات CSS الخارجية                -->
     <!-- ================================== -->
@@ -48,12 +45,12 @@
         <!-- الشعار + اسم الموقع -->
 <a href="./" class="logo-box">
     <img
-        src="/toonia/assets/images/brand/logo.svg"
-        alt="Toonia Logo"
-        width="40"
-        height="40"
-        loading="eager"
-        decoding="async" />
+  src="/toonia/assets/images/brand/logo.svg"
+  alt="Toonia Logo"
+  width="40"
+  height="40"
+  loading="eager"
+  decoding="async">
     <div class="site-name">
         Too<span>nia</span>
     </div>
