--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 
         <!-- الشعار + اسم الموقع -->
 <a href="./" class="logo-box">
+    <a href="/toonia/" class="logo-box">
     <img
-  src="/toonia/assets/images/brand/logo.svg"
-  alt="Toonia Logo"
-  width="40"
-  height="40"
-  loading="eager"
-  decoding="async">
+        src="/toonia/assets/images/brand/logo.svg"
+        alt="Toonia Logo"
+        width="40"
+        height="40"
+        loading="eager"
+        decoding="async">
     <div class="site-name">
         Too<span>nia</span>
     </div>
