--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
         </div>
 
         <!-- الشعار + اسم الموقع -->
-<a href="./" class="logo-box">
-    <a href="/toonia/" class="logo-box">
+<a href="/toonia/" class="logo-box">
     <img
-        src="/toonia/assets/images/brand/logo.svg"
+        src="/toonia/assets/images/brand/logo.png"
         alt="Toonia Logo"
         width="40"
-        height="40"
-        loading="eager"
-        decoding="async">
+        height="40">
     <div class="site-name">
         Too<span>nia</span>
     </div>
