--- a/index.html
+++ b/index.html
@@ -313,6 +313,36 @@
   </div>
 </section>
 
+
+
+
+
+<section class="audience-types" aria-label="تصفية حسب نوع المحتوى">
+  <a href="/cartoon" class="audience-card cartoon">
+    <span class="icon">🧸</span>
+    <span class="label">كرتون</span>
+  </a>
+
+  <a href="/anime" class="audience-card anime">
+    <span class="icon">🔥</span>
+    <span class="label">أنمي</span>
+  </a>
+
+  <a href="/family" class="audience-card family">
+    <span class="icon">👨‍👩‍👧‍👦</span>
+    <span class="label">عائلي</span>
+  </a>
+
+  <a href="/teen" class="audience-card teen">
+    <span class="icon">🎮</span>
+    <span class="label">شباب</span>
+  </a>
+</section>
+
+
+
+
+
 <!-- ================================== -->
 <!--  قسم الأعمال الأكثر مشاهدة        -->
 <!-- ================================== -->
