--- a/index.html
+++ b/index.html
@@ -311,37 +311,11 @@
 </article>
 
   </div>
+  
+  <!-- نقاط السلايدر -->
+<div class="slider-dots" data-slider="newEpisodesSlider"></div>
+
 </section>
-
-
-
-
-
-<section class="audience-types" aria-label="تصفية حسب نوع المحتوى">
-  <a href="/cartoon" class="audience-card cartoon">
-    <span class="icon">🧸</span>
-    <span class="label">كرتون</span>
-  </a>
-
-  <a href="/anime" class="audience-card anime">
-    <span class="icon">🔥</span>
-    <span class="label">أنمي</span>
-  </a>
-
-  <a href="/family" class="audience-card family">
-    <span class="icon">👨‍👩‍👧‍👦</span>
-    <span class="label">عائلي</span>
-  </a>
-
-  <a href="/teen" class="audience-card teen">
-    <span class="icon">🎮</span>
-    <span class="label">شباب</span>
-  </a>
-</section>
-
-
-
-
 
 <!-- ================================== -->
 <!--  قسم الأعمال الأكثر مشاهدة        -->
@@ -403,10 +377,9 @@
 </article>
 
     </div>
-
+<!-- نقاط السلايدر -->
+<div class="slider-dots" data-slider="mostWatchedSlider"></div>
   </div>
-
-  <div class="dots" id="mostWatchedDots"></div>
 
 </section>
 
