--- a/index.html
+++ b/index.html
@@ -244,78 +244,80 @@
 
     <div class="slider" id="newEpisodesSlider">
 
-    <article class="slide">
-  <a href="#">
-    <img 
-      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="المحقق كونان الجزء الأول"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+      <article class="slide">
+        <a href="#">
+          <img 
+            src="assets/images/images-new-episodes/new_1.webp"
+            alt="حلقة جديدة 1"
+            loading="lazy"
+          >
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
-    <article class="slide">
-  <a href="#">
-    <img 
-      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="المحقق كونان الجزء الأول"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+      <article class="slide">
+        <a href="#">
+          <img 
+            src="assets/images/images-new-episodes/new_2.webp"
+            alt="حلقة جديدة 2"
+            loading="lazy"
+          >
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
-    <article class="slide">
-  <a href="#">
-    <img 
-      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="المحقق كونان الجزء الأول"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+      <article class="slide">
+        <a href="#">
+          <img 
+            src="assets/images/images-new-episodes/new_3.webp"
+            alt="حلقة جديدة 3"
+            loading="lazy"
+          >
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
-    <article class="slide">
-  <a href="#">
-    <img 
-      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="المحقق كونان الجزء الأول"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+      <article class="slide">
+        <a href="#">
+          <img 
+            src="assets/images/images-new-episodes/new_4.webp"
+            alt="حلقة جديدة 4"
+            loading="lazy"
+          >
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
-    <article class="slide">
-  <a href="#">
-    <img 
-      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="المحقق كونان الجزء الأول"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+      <article class="slide">
+        <a href="#">
+          <img 
+            src="assets/images/images-new-episodes/new_5.webp"
+            alt="حلقة جديدة 5"
+            loading="lazy"
+          >
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
-    <article class="slide">
-  <a href="#">
-    <img 
-      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="المحقق كونان الجزء الأول"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+      <article class="slide">
+        <a href="#">
+          <img 
+            src="assets/images/images-new-episodes/new_6.webp"
+            alt="حلقة جديدة 6"
+            loading="lazy"
+          >
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
+    </div>
   </div>
-  
+
   <!-- نقاط السلايدر -->
-<div class="slider-dots" data-slider="newEpisodesSlider"></div>
+  <div class="slider-dots" data-slider="newEpisodesSlider"></div>
 
 </section>
+
 
 <!-- ================================== -->
 <!--  قسم الأعمال الأكثر مشاهدة        -->
