--- a/index.html
+++ b/index.html
@@ -241,71 +241,74 @@
   </div>
 
   <div class="slider-wrapper">
-
     <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
         <a href="#">
-          <img 
-            src="assets/images/images-new-episodes/new_1.webp"
-            alt="حلقة جديدة 1"
-            loading="lazy"
-          >
+          <img src="assets/images/images-new-episodes/new_1.webp" alt="حلقة جديدة 1" loading="lazy">
           <span class="badge">HD</span>
         </a>
       </article>
 
       <article class="slide">
         <a href="#">
-          <img 
-            src="assets/images/images-new-episodes/new_2.webp"
-            alt="حلقة جديدة 2"
-            loading="lazy"
-          >
+          <img src="assets/images/images-new-episodes/new_2.webp" alt="حلقة جديدة 2" loading="lazy">
           <span class="badge">HD</span>
         </a>
       </article>
 
       <article class="slide">
         <a href="#">
-          <img 
-            src="assets/images/images-new-episodes/new_3.webp"
-            alt="حلقة جديدة 3"
-            loading="lazy"
-          >
+          <img src="assets/images/images-new-episodes/new_3.webp" alt="حلقة جديدة 3" loading="lazy">
           <span class="badge">HD</span>
         </a>
       </article>
 
       <article class="slide">
         <a href="#">
-          <img 
-            src="assets/images/images-new-episodes/new_4.webp"
-            alt="حلقة جديدة 4"
-            loading="lazy"
-          >
+          <img src="assets/images/images-new-episodes/new_4.webp" alt="حلقة جديدة 4" loading="lazy">
           <span class="badge">HD</span>
         </a>
       </article>
 
       <article class="slide">
         <a href="#">
-          <img 
-            src="assets/images/images-new-episodes/new_5.webp"
-            alt="حلقة جديدة 5"
-            loading="lazy"
-          >
+          <img src="assets/images/images-new-episodes/new_5.webp" alt="حلقة جديدة 5" loading="lazy">
           <span class="badge">HD</span>
         </a>
       </article>
 
       <article class="slide">
         <a href="#">
-          <img 
-            src="assets/images/images-new-episodes/new_6.webp"
-            alt="حلقة جديدة 6"
-            loading="lazy"
-          >
+          <img src="assets/images/images-new-episodes/new_6.webp" alt="حلقة جديدة 6" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-new-episodes/new_7.webp" alt="حلقة جديدة 7" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-new-episodes/new_8.webp" alt="حلقة جديدة 8" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-new-episodes/new_9.webp" alt="حلقة جديدة 9" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-new-episodes/new_10.webp" alt="حلقة جديدة 10" loading="lazy">
           <span class="badge">HD</span>
         </a>
       </article>
@@ -317,7 +320,6 @@
   <div class="slider-dots" data-slider="newEpisodesSlider"></div>
 
 </section>
-
 
 <!-- ================================== -->
 <!--  قسم الأعمال الأكثر مشاهدة        -->
