--- a/index.html
+++ b/index.html
@@ -335,54 +335,81 @@
 
     <div class="slider" id="mostWatchedSlider">
 
-      <!-- بطاقة -->
       <article class="slide">
-  <a href="#">
-    <img 
-      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="المحقق كونان الجزء الأول"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-1.webp" alt="أنمي الأكثر مشاهدة 1" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
       <article class="slide">
-  <a href="#">
-    <img
-      src="https://i.ibb.co/Z1p6HWpD/su-WDMXbqd-Y767-ZYf-Kmaoih7-Lpoe.webp"
-      alt="المحقق كونان الجزء الثاني"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-2.webp" alt="أنمي الأكثر مشاهدة 2" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
       <article class="slide">
-  <a href="#">
-    <img
-      src="https://i.ibb.co/TqxzvMVT/e0-B6i48kxd-Rk-Mc-K4t-R4-YNf-XGWOc.webp"
-      alt="المحقق كونان الجزء الرابع"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-3.webp" alt="أنمي الأكثر مشاهدة 3" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
       <article class="slide">
-  <a href="#">
-    <img
-      src="https://i.ibb.co/V4mvvH6/4j-U2-Bdk1-MB2-Ov-P4-BBv-TJIPQc0-BF.webp"
-      alt="المحقق كونان الجزء السابع"
-      loading="lazy"
-    >
-    <span class="badge">HD</span>
-  </a>
-</article>
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-4.webp" alt="أنمي الأكثر مشاهدة 4" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-5.webp" alt="أنمي الأكثر مشاهدة 5" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-6.webp" alt="أنمي الأكثر مشاهدة 6" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-7.webp" alt="أنمي الأكثر مشاهدة 7" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-8.webp" alt="أنمي الأكثر مشاهدة 8" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-9.webp" alt="أنمي الأكثر مشاهدة 9" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/images/images-top-anime/Top-10.webp" alt="أنمي الأكثر مشاهدة 10" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
 
     </div>
-<!-- نقاط السلايدر -->
-<div class="slider-dots" data-slider="mostWatchedSlider"></div>
+
+    <!-- نقاط السلايدر -->
+    <div class="slider-dots" data-slider="mostWatchedSlider"></div>
+
   </div>
 
 </section>
