--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
   </div>
 
   <div class="slider-wrapper">
+
+    <!-- سهم السابق -->
+    <button class="slider-arrow prev" data-target="newEpisodesSlider" aria-label="السابق">
+      ‹
+    </button>
+
+    <!-- السلايدر -->
     <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
@@ -314,6 +321,12 @@
       </article>
 
     </div>
+
+    <!-- سهم التالي -->
+    <button class="slider-arrow next" data-target="newEpisodesSlider" aria-label="التالي">
+      ›
+    </button>
+
   </div>
 
   <!-- نقاط السلايدر -->
