--- a/index.html
+++ b/index.html
@@ -240,14 +240,13 @@
     <h2>الحلقات الجديدة</h2>
   </div>
 
+  <!-- سهم السابق (خارج السلايدر) -->
+  <button class="section-arrow prev" data-target="newEpisodesSlider" aria-label="السابق">
+    ‹
+  </button>
+
+  <!-- السلايدر -->
   <div class="slider-wrapper">
-
-    <!-- سهم السابق -->
-    <button class="slider-arrow prev" data-target="newEpisodesSlider" aria-label="السابق">
-      ‹
-    </button>
-
-    <!-- السلايدر -->
     <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
@@ -321,13 +320,12 @@
       </article>
 
     </div>
-
-    <!-- سهم التالي -->
-    <button class="slider-arrow next" data-target="newEpisodesSlider" aria-label="التالي">
-      ›
-    </button>
-
   </div>
+
+  <!-- سهم التالي (خارج السلايدر) -->
+  <button class="section-arrow next" data-target="newEpisodesSlider" aria-label="التالي">
+    ›
+  </button>
 
   <!-- نقاط السلايدر -->
   <div class="slider-dots" data-slider="newEpisodesSlider"></div>
