--- a/index.html
+++ b/index.html
@@ -238,10 +238,15 @@
 
   <div class="section-header">
     <h2>الحلقات الجديدة</h2>
+
+    <div class="section-arrows">
+      <button class="arrow prev" data-target="newEpisodesSlider" aria-label="السابق">‹</button>
+      <button class="arrow next" data-target="newEpisodesSlider" aria-label="التالي">›</button>
+    </div>
   </div>
 
   <div class="slider-wrapper">
-    <div class="slider" id="newEpisodesSlider">
+    <div class="slider" id="newEpisodesSlider
 
       <article class="slide">
         <a href="#">
@@ -329,12 +334,16 @@
 
   <div class="section-header">
     <h2>الأكثر مشاهدة</h2>
+
+    <div class="section-arrows">
+      <button class="arrow prev" data-target="mostWatchedSlider" aria-label="السابق">‹</button>
+      <button class="arrow next" data-target="mostWatchedSlider" aria-label="التالي">›</button>
+    </div>
   </div>
 
   <div class="slider-wrapper">
-
     <div class="slider" id="mostWatchedSlider">
-
+      
       <article class="slide">
         <a href="#">
           <img src="assets/images/images-top-anime/Top-1.webp" alt="أنمي الأكثر مشاهدة 1" loading="lazy">
