--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   </div>
 
   <div class="slider-wrapper">
-    <div class="slider" id="newEpisodesSlider
+<div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
         <a href="#">
