--- a/index.html
+++ b/index.html
@@ -240,14 +240,22 @@
     <h2>الحلقات الجديدة</h2>
 
     <div class="section-arrows">
-      <button class="arrow prev" data-target="newEpisodesSlider" aria-label="السابق">‹</button>
-      <button class="arrow next" data-target="newEpisodesSlider" aria-label="التالي">›</button>
+      <button
+        class="arrow prev"
+        data-target="newEpisodesSlider"
+        aria-label="السابق">‹</button>
+
+      <button
+        class="arrow next"
+        data-target="newEpisodesSlider"
+        aria-label="التالي">›</button>
     </div>
   </div>
 
   <div class="slider-wrapper">
-<div class="slider" id="newEpisodesSlider">
+    <div class="slider-track" id="newEpisodesSlider">
 
+  
       <article class="slide">
         <a href="#">
           <img src="assets/images/images-new-episodes/new_1.webp" alt="حلقة جديدة 1" loading="lazy">
@@ -342,8 +350,10 @@
   </div>
 
   <div class="slider-wrapper">
-    <div class="slider" id="mostWatchedSlider">
-      
+    <!-- العنصر الذي سيتحرك -->
+    <div class="slider-track" id="mostWatchedSlider">
+
+   
       <article class="slide">
         <a href="#">
           <img src="assets/images/images-top-anime/Top-1.webp" alt="أنمي الأكثر مشاهدة 1" loading="lazy">
