--- a/index.html
+++ b/index.html
@@ -44,14 +44,17 @@
 
         <!-- الشعار + اسم الموقع -->
 <a href="/toonia/" class="logo-box">
-    <img
-        src="/toonia/assets/images/brand/logo.png"
-        alt="Toonia Logo"
-        width="40"
-        height="40">
-    <div class="site-name">
-        Too<span>nia</span>
-    </div>
+  <img
+    src="https://i.ibb.co/WWQtfGzs/logo.png"
+    alt="Toonia Logo"
+    width="40"
+    height="40"
+    loading="eager"
+    decoding="async">
+    
+  <div class="site-name">
+    Too<span>nia</span>
+  </div>
 </a>
 
     </div>
@@ -81,93 +84,93 @@
   <div class="hero-slider">
 
     <!-- Slide 1 (LCP) -->
-    <div class="hero-slide active">
-      <img
-        src="assets/images/images-hero/hero_1.webp"
-        alt="Hero Anime Banner 1"
-        width="1920"
-        height="1080"
-        loading="eager"
-        fetchpriority="high"
-        decoding="async">
-    </div>
+<div class="hero-slide active">
+  <img
+    src="https://i.ibb.co/yrbb6Nj/hero-1.jpg"
+    alt="Hero Anime Banner 1"
+    width="1920"
+    height="1080"
+    loading="eager"
+    fetchpriority="high"
+    decoding="async">
+</div>
 
-    <!-- Slide 2 -->
-    <div class="hero-slide">
-      <img
-        src="assets/images/images-hero/hero_2.webp"
-        alt="Hero Anime Banner 2"
-        width="1920"
-        height="1080"
-        loading="lazy"
-        decoding="async">
-    </div>
+<!-- Slide 2 -->
+<div class="hero-slide">
+  <img
+    src="https://i.ibb.co/BVJk1L6w/hero-2.jpg"
+    alt="Hero Anime Banner 2"
+    width="1920"
+    height="1080"
+    loading="lazy"
+    decoding="async">
+</div>
 
-    <!-- Slide 3 -->
-    <div class="hero-slide">
-      <img
-        src="assets/images/images-hero/hero_3.webp"
-        alt="Hero Anime Banner 3"
-        width="1920"
-        height="1080"
-        loading="lazy"
-        decoding="async">
-    </div>
+<!-- Slide 3 -->
+<div class="hero-slide">
+  <img
+    src="https://i.ibb.co/j9yDF42j/hero-3.jpg"
+    alt="Hero Anime Banner 3"
+    width="1920"
+    height="1080"
+    loading="lazy"
+    decoding="async">
+</div>
 
-    <!-- Slide 4 -->
-    <div class="hero-slide">
-      <img
-        src="assets/images/images-hero/hero_4.webp"
-        alt="Hero Anime Banner 4"
-        width="1920"
-        height="1080"
-        loading="lazy"
-        decoding="async">
-    </div>
+<!-- Slide 4 -->
+<div class="hero-slide">
+  <img
+    src="https://i.ibb.co/pBVqk4wj/hero-4.jpg"
+    alt="Hero Anime Banner 4"
+    width="1920"
+    height="1080"
+    loading="lazy"
+    decoding="async">
+</div>
 
-    <!-- Slide 5 -->
-    <div class="hero-slide">
-      <img
-        src="assets/images/images-hero/hero_5.webp"
-        alt="Hero Anime Banner 5"
-        width="1920"
-        height="1080"
-        loading="lazy"
-        decoding="async">
-    </div>
+<!-- Slide 5 -->
+<div class="hero-slide">
+  <img
+    src="https://i.ibb.co/hQFP6J6/hero-5.jpg"
+    alt="Hero Anime Banner 5"
+    width="1920"
+    height="1080"
+    loading="lazy"
+    decoding="async">
+</div>
 
-    <!-- Slide 6 -->
-    <div class="hero-slide">
-      <img
-        src="assets/images/images-hero/hero_6.webp"
-        alt="Hero Anime Banner 6"
-        width="1920"
-        height="1080"
-        loading="lazy"
-        decoding="async">
-    </div>
+<!-- Slide 6 -->
+<div class="hero-slide">
+  <img
+    src="https://i.ibb.co/tp73st3f/hero-6.jpg"
+    alt="Hero Anime Banner 6"
+    width="1920"
+    height="1080"
+    loading="lazy"
+    decoding="async">
+</div>
 
-    <!-- Slide 7 -->
-    <div class="hero-slide">
-      <img
-        src="assets/images/images-hero/hero_7.webp"
-        alt="Hero Anime Banner 7"
-        width="1920"
-        height="1080"
-        loading="lazy"
-        decoding="async">
-    </div>
+<!-- Slide 7 -->
+<div class="hero-slide">
+  <img
+    src="https://i.ibb.co/7tZJzJZs/hero-7.jpg"
+    alt="Hero Anime Banner 7"
+    width="1920"
+    height="1080"
+    loading="lazy"
+    decoding="async">
+</div>
 
-    <!-- Slide 8 -->
-    <div class="hero-slide">
-      <img
-        src="assets/images/images-hero/hero_8.webp"
-        alt="Hero Anime Banner 8"
-        width="1920"
-        height="1080"
-        loading="lazy"
-        decoding="async">
-    </div>
+<!-- Slide 8 -->
+<div class="hero-slide">
+  <img
+    src="https://i.ibb.co/F45YG3Db/hero-8.jpg"
+    alt="Hero Anime Banner 8"
+    width="1920"
+    height="1080"
+    loading="lazy"
+    decoding="async">
+</div>
 
   </div>
 
@@ -249,74 +252,74 @@
 <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_1.webp" alt="حلقة جديدة 1" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+  <a href="#">
+    <img src="https://i.ibb.co/tTwd183W/new-1.webp" alt="حلقة جديدة 1" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_2.webp" alt="حلقة جديدة 2" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/F2233G4/new-2.webp" alt="حلقة جديدة 2" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_3.webp" alt="حلقة جديدة 3" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/prPPKq8d/new-3.webp" alt="حلقة جديدة 3" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_4.webp" alt="حلقة جديدة 4" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/hxFLFZDM/new-4.jpg" alt="حلقة جديدة 4" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_5.webp" alt="حلقة جديدة 5" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/xKFSWd3P/new-5.jpg" alt="حلقة جديدة 5" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_6.webp" alt="حلقة جديدة 6" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/9mMxBDMG/new-6.jpg" alt="حلقة جديدة 6" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_7.webp" alt="حلقة جديدة 7" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/bMHHcCwP/new-7.jpg" alt="حلقة جديدة 7" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_8.webp" alt="حلقة جديدة 8" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/p6D7TXjF/new-8.jpg" alt="حلقة جديدة 8" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_9.webp" alt="حلقة جديدة 9" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/N6k4PB8j/new-9.webp" alt="حلقة جديدة 9" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-new-episodes/new_10.webp" alt="حلقة جديدة 10" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/rPhWMTZ/new-10.webp" alt="حلقة جديدة 10" loading="lazy">
+    <span class="badge">HD</span>
+  </a>
+</article>
 
     </div>
   </div>
@@ -344,75 +347,96 @@
   <div class="slider-wrapper">
     <div class="slider" id="mostWatchedSlider">
       
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-1.webp" alt="أنمي الأكثر مشاهدة 1" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+      <!-- بطاقة عمل: المحقق كونان -->
+<article class="work-card">
+  <a href="/work/conan">
+    <img
+      src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
+      alt="المحقق كونان"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-2.webp" alt="أنمي الأكثر مشاهدة 2" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp"
+      alt="Bluey"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-3.webp" alt="أنمي الأكثر مشاهدة 3" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-4.webp" alt="أنمي الأكثر مشاهدة 4" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-5.webp" alt="أنمي الأكثر مشاهدة 5" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
+      alt="بوستر مسلسل بلو"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-6.webp" alt="أنمي الأكثر مشاهدة 6" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/conan">
+    <img
+      src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
+      alt="المحقق كونان"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-7.webp" alt="أنمي الأكثر مشاهدة 7" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-8.webp" alt="أنمي الأكثر مشاهدة 8" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/8LN8LxmZ/e3i8-K5-W4p2-JLGMa-Px-RWH1-Hr9r-M2.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-9.webp" alt="أنمي الأكثر مشاهدة 9" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy">
+  </a>
+</article>
 
-      <article class="slide">
-        <a href="#">
-          <img src="assets/images/images-top-anime/Top-10.webp" alt="أنمي الأكثر مشاهدة 10" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
+      alt="بوستر مسلسل بلو"
+      loading="lazy">
+  </a>
+</article>
 
     </div>
 
@@ -439,46 +463,40 @@
   <!-- شبكة عرض الأعمال -->
   <div class="works-grid">
 
-    <!-- بطاقة عمل -->
     <!-- بطاقة عمل: المحقق كونان -->
 <article class="work-card">
   <a href="/work/conan">
     <img
       src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
       alt="المحقق كونان"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
-    <article class="work-card">
+<article class="work-card">
   <a href="/work/bluey">
     <img
       src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp"
       alt="Bluey"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
-
-    <article class="work-card">
+<article class="work-card">
   <a href="/work/bluey">
     <img
       src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp"
       alt="Bluey cartoon poster"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
-    <article class="work-card">
+<article class="work-card">
   <a href="/work/bluey">
     <img
       src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp"
       alt="Bluey cartoon poster"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
@@ -487,8 +505,7 @@
     <img
       src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
       alt="بوستر مسلسل بلو"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
@@ -497,8 +514,7 @@
     <img
       src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
       alt="المحقق كونان"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
@@ -507,8 +523,7 @@
     <img
       src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
       alt="Bluey cartoon poster"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
@@ -517,18 +532,7 @@
     <img
       src="https://i.ibb.co/8LN8LxmZ/e3i8-K5-W4p2-JLGMa-Px-RWH1-Hr9r-M2.webp"
       alt="Bluey cartoon poster"
-      loading="lazy"
-    >
-  </a>
-</article>
-
-<article class="work-card">
-  <a href="/work/bluey">
-    <img
-      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
-      alt="Bluey cartoon poster"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
@@ -537,18 +541,7 @@
     <img
       src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
       alt="Bluey cartoon poster"
-      loading="lazy"
-    >
-  </a>
-</article>
-
-<article class="work-card">
-  <a href="/work/bluey">
-    <img
-      src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
-      alt="بوستر مسلسل بلو"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
@@ -557,8 +550,7 @@
     <img
       src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
       alt="بوستر مسلسل بلو"
-      loading="lazy"
-    >
+      loading="lazy">
   </a>
 </article>
 
