--- a/index.html
+++ b/index.html
@@ -353,6 +353,8 @@
     <img
       src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
       alt="المحقق كونان"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -362,6 +364,8 @@
     <img
       src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp"
       alt="Bluey"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -371,6 +375,8 @@
     <img
       src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp"
       alt="Bluey cartoon poster"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -380,6 +386,8 @@
     <img
       src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp"
       alt="Bluey cartoon poster"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -389,6 +397,8 @@
     <img
       src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
       alt="بوستر مسلسل بلو"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -398,6 +408,8 @@
     <img
       src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
       alt="المحقق كونان"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -407,6 +419,8 @@
     <img
       src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
       alt="Bluey cartoon poster"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -416,6 +430,8 @@
     <img
       src="https://i.ibb.co/8LN8LxmZ/e3i8-K5-W4p2-JLGMa-Px-RWH1-Hr9r-M2.webp"
       alt="Bluey cartoon poster"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -425,6 +441,8 @@
     <img
       src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
       alt="Bluey cartoon poster"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
@@ -434,6 +452,8 @@
     <img
       src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
       alt="بوستر مسلسل بلو"
+      width="300"
+      height="450"
       loading="lazy">
   </a>
 </article>
