--- a/index.html
+++ b/index.html
@@ -348,113 +348,123 @@
     <div class="slider" id="mostWatchedSlider">
       
       <!-- بطاقة عمل: المحقق كونان -->
-<article class="work-card">
-  <a href="/work/conan">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
-      alt="المحقق كونان"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/C3X8hXYz/Top-1.jpg"
+      alt="أنمي الأكثر مشاهدة 1"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp"
-      alt="Bluey"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/s9zRVQwT/Top-2.jpg"
+      alt="أنمي الأكثر مشاهدة 2"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp"
-      alt="Bluey cartoon poster"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/JDvtpgJ/Top-3.jpg"
+      alt="أنمي الأكثر مشاهدة 3"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp"
-      alt="Bluey cartoon poster"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/zVggXTP1/Top-4.jpg"
+      alt="أنمي الأكثر مشاهدة 4"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
-      alt="بوستر مسلسل بلو"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/jKYtZh8/Top-5.jpg"
+      alt="أنمي الأكثر مشاهدة 5"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/conan">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
-      alt="المحقق كونان"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/Q3jL1krt/Top-6.jpg"
+      alt="أنمي الأكثر مشاهدة 6"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
-      alt="Bluey cartoon poster"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/tggnMHG/Top-7.jpg"
+      alt="أنمي الأكثر مشاهدة 7"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/8LN8LxmZ/e3i8-K5-W4p2-JLGMa-Px-RWH1-Hr9r-M2.webp"
-      alt="Bluey cartoon poster"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/zTZ0t73J/Top-8.jpg"
+      alt="أنمي الأكثر مشاهدة 8"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
-      alt="Bluey cartoon poster"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/v69LKSRN/Top-9.jpg"
+      alt="أنمي الأكثر مشاهدة 9"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
-<article class="work-card">
-  <a href="/work/bluey">
+<article class="slide">
+  <a href="#">
     <img
-      src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
-      alt="بوستر مسلسل بلو"
-      width="300"
-      height="450"
+      src="https://i.ibb.co/MDrLCtdQ/Top-10.jpg"
+      alt="أنمي الأكثر مشاهدة 10"
+      width="120"
+      height="180"
       loading="lazy">
+    <span class="badge">HD</span>
   </a>
 </article>
 
