--- a/index.html
+++ b/index.html
@@ -493,40 +493,46 @@
   <!-- شبكة عرض الأعمال -->
   <div class="works-grid">
 
+    <!-- بطاقة عمل -->
     <!-- بطاقة عمل: المحقق كونان -->
 <article class="work-card">
   <a href="/work/conan">
     <img
       src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
       alt="المحقق كونان"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
 </article>
 
-<article class="work-card">
+    <article class="work-card">
   <a href="/work/bluey">
     <img
       src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp"
       alt="Bluey"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
 </article>
 
-<article class="work-card">
+
+    <article class="work-card">
   <a href="/work/bluey">
     <img
       src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp"
       alt="Bluey cartoon poster"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
 </article>
 
-<article class="work-card">
+    <article class="work-card">
   <a href="/work/bluey">
     <img
       src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp"
       alt="Bluey cartoon poster"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
 </article>
 
@@ -535,7 +541,8 @@
     <img
       src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
       alt="بوستر مسلسل بلو"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
 </article>
 
@@ -544,7 +551,8 @@
     <img
       src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
       alt="المحقق كونان"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
 </article>
 
@@ -553,7 +561,8 @@
     <img
       src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
       alt="Bluey cartoon poster"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
 </article>
 
@@ -562,7 +571,18 @@
     <img
       src="https://i.ibb.co/8LN8LxmZ/e3i8-K5-W4p2-JLGMa-Px-RWH1-Hr9r-M2.webp"
       alt="Bluey cartoon poster"
-      loading="lazy">
+      loading="lazy"
+    >
+  </a>
+</article>
+
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
   </a>
 </article>
 
@@ -571,7 +591,18 @@
     <img
       src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
       alt="Bluey cartoon poster"
-      loading="lazy">
+      loading="lazy"
+    >
+  </a>
+</article>
+
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
+      alt="بوستر مسلسل بلو"
+      loading="lazy"
+    >
   </a>
 </article>
 
@@ -580,9 +611,10 @@
     <img
       src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
       alt="بوستر مسلسل بلو"
-      loading="lazy">
+      loading="lazy"
+    >
   </a>
-</article>
+</article
 
   </div>
 
