--- a/index.html
+++ b/index.html
@@ -619,9 +619,9 @@
   </div>
 
   <!-- زر الانتقال إلى صفحة جميع الأعمال -->
-  <a href="/works" class="view-all-btn">
-    عرض جميع الأعمال
-  </a>
+<a href="/toonia/works/" class="view-all-btn">
+  عرض جميع الأعمال
+</a>
 
 </section>
 
