--- a/index.html
+++ b/index.html
@@ -620,8 +620,9 @@
 
   <!-- زر الانتقال إلى صفحة جميع الأعمال -->
 <a href="/toonia/works/" class="view-all-btn">
-  عرض جميع الأعمال
-</a>
+      عرض جميع الأعمال
+    </a>
+  </div>
 
 </section>
 
